tests/ui/closures/2229_closure_analysis/deep-multilevel-struct.stderr
error: First Pass analysis includes:
  --> $DIR/deep-multilevel-struct.rs:35:5
   |
LL | /     || {
LL | |
LL | |
LL | |         let x = &p.a.p.x;
...  |
LL | |     };
   | |_____^
   |
note: Capturing p[(0, 0),(0, 0),(0, 0)] -> Immutable
  --> $DIR/deep-multilevel-struct.rs:38:18
   |
LL |         let x = &p.a.p.x;
   |                  ^^^^^^^
note: Capturing p[(1, 0),(1, 0),(1, 0)] -> Mutable
  --> $DIR/deep-multilevel-struct.rs:40:9
   |
LL |         p.b.q.y = 9;
   |         ^^^^^^^
note: Capturing p[] -> Immutable
  --> $DIR/deep-multilevel-struct.rs:43:26
   |
LL |         println!("{:?}", p);
   |                          ^

error: Min Capture analysis includes:
  --> $DIR/deep-multilevel-struct.rs:35:5
   |
LL | /     || {
LL | |
LL | |
LL | |         let x = &p.a.p.x;
...  |
LL | |     };
   | |_____^
   |
note: Min Capture p[] -> Mutable
  --> $DIR/deep-multilevel-struct.rs:40:9
   |
LL |         p.b.q.y = 9;
   |         ^^^^^^^ p[] captured as Mutable here
...
LL |         println!("{:?}", p);
   |                          ^ p[] used here

error: aborting due to 2 previous errors

